[project]
name = "iris-dash"
version = "0.1.0"
description = "Example iris dashboard copied from dash-bootstrap-components examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "gunicorn",
    "pandas>=2.1.2",
    "plotly",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
